# 3DRDME

./: CMakeLists.txt  params.txt
include/: ParamSet.hpp  SimData.hpp  Simulation.cuh
shaders/: voxel.frag  voxel.vert
src/: SimData.cpp  Simulation.cu  main.cpp  main.cu
